<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15sp"
    tools:context=".LoginActivity">


  <Button
      android:id="@+id/back_login"
      android:layout_width="203dp"
      android:layout_height="53dp"
      android:background="#00FFFFFF"
      android:fontFamily="@font/pixel"
      android:gravity="clip_horizontal"
      android:text="@string/back_to_login"
      android:textStyle="bold"
      app:iconPadding="1dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="124dp"
      android:fontFamily="@font/pixel"
      android:gravity="center"
      android:text="@string/register"
      android:textAppearance="@style/TextAppearance.AppCompat.Body2"
      android:textColor="@color/common_google_signin_btn_text_light_pressed"
      android:textSize="40sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.506"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/register_button"
      android:layout_width="175dp"
      android:layout_height="56dp"
      android:backgroundTint="#80DBB0"
      android:backgroundTintMode="add"
      android:fontFamily="@font/pixel"
      android:text="@string/sign_up"
      android:textSize="20dp"
      android:textStyle="bold"
      app:iconTint="#9DE6CD"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password"
      app:layout_constraintVertical_bias="0.149" />

  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/password"
      android:layout_width="257dp"
      android:layout_height="68dp"
      android:layout_marginTop="28dp"
      android:background="@drawable/white_bg"
      android:hint="@string/password"
      android:padding="10dp"
      android:textSize="25sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/email" />

  <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/email"
      android:layout_width="257dp"
      android:layout_height="68dp"
      android:layout_marginTop="44dp"
      android:background="@drawable/white_bg"
      android:hint="@string/email"
      android:padding="10dp"
      android:selectAllOnFocus="false"
      android:singleLine="false"
      android:textSize="25sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      tools:visibility="visible" />

  <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyleHorizontal"
      android:layout_width="91dp"
      android:layout_height="66dp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/register_button"
      app:layout_constraintVertical_bias="0.277" />

</androidx.constraintlayout.widget.ConstraintLayout>